welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:6: error: type mismatch;
 found   : Unit
 required: Int
	nb= nb/nums.length
          ^